# lec04

./: CMakeLists.txt
include/lec03/: util.hpp
src/: main  main.cpp  util.cpp
tests/: CMakeLists.txt  test_main.cpp
